fix: fix documentation for cosmos-transfer1 for conda reference (#109)
* fix: fix documentation for cosmos-transfer1 for conda reference

* fix: fix python version and conda prefix in Dockerfile

* fix: Update instructions seperately for conda and docker

* fix: remove env variable from docker file

* fix: removed apex reference

* fix: add pandas

* Update scripts/test_environment.py

Co-authored-by: Nathan Hayes-Roth <nathan.hayesroth@gmail.com>

* Update INSTALL.md

Co-authored-by: Nathan Hayes-Roth <nathan.hayesroth@gmail.com>

---------

Co-authored-by: pjannaty <107573555+pjannaty@users.noreply.github.com>
Co-authored-by: Nathan Hayes-Roth <nathan.hayesroth@gmail.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -15,28 +15,39 @@
 
 # Please keep requirements sorted alphabetically
 
-av==14.2.0
-better-profanity==0.7.0
-boto3==1.35.99
-diffusers==0.32.2
-einx==0.1.3
-huggingface-hub==0.29.2
+apex==0.9.10dev
+attr==0.3.2
+attrs==25.3.0
+better_profanity==0.7.0
+cloudpickle==3.1.1
+decord==0.6.0
+dill==0.4.0
+einops==0.8.1
 hydra-core==1.3.2
-imageio[pyav,ffmpeg]==2.37.0
+imageio==2.37.0
 iopath==0.1.10
-ipdb==0.13.13
 loguru==0.7.3
-mediapy==1.2.2
-megatron-core==0.10.0
+matplotlib==3.10.3
+mediapy==1.2.4
+megatron_core==0.10.0
 natsort==8.4.0
 nltk==3.9.1
+numpy==2.2.6
+nvidia_ml_py==12.570.86
 omegaconf==2.3.0
-opencv-python==4.10.0.84
+opencv_python==4.10.0.84
+opencv_python_headless==4.11.0.86
+packaging==25.0
+pandas==2.2.3
 peft==0.14.0
-pycocotools
-retinaface-py==0.0.2
+Pillow==11.2.1
+pycocotools==2.0.8
+pynvml==12.0.0
+PyYAML==6.0.2
+retinaface_py==0.0.2
 rtmlib==0.0.13
-scikit-image==0.25.2
-sentencepiece==0.2.0
-termcolor==2.5.0
+termcolor==3.1.0
+torch==2.7.0
+torchvision==0.22.0
+tqdm==4.67.1
 transformers==4.49.0
