--- a/requirements.txt
+++ b/requirements.txt
@@ -24,7 +24,7 @@ decord==0.6.0
 dill==0.4.0
 einops==0.8.1
 hydra-core==1.3.2
-imageio==2.37.0
+imageio[pyav,ffmpeg]==2.37.0
 iopath==0.1.10
 loguru==0.7.3
 matplotlib==3.10.3
@@ -41,11 +41,13 @@ packaging==25.0
 pandas==2.2.3
 peft==0.14.0
 Pillow==11.2.1
+pillow
 pycocotools==2.0.8
 pynvml==12.0.0
 PyYAML==6.0.2
 retinaface_py==0.0.2
 rtmlib==0.0.13
+sam2==1.1.0
 termcolor==3.1.0
 torch==2.7.0
 torchvision==0.22.0
